--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Mega theme
 Theme URI: localhost
-Description: Tema para o teste do Mega Conecta
+Description: Tema para o teste do Mega Conecta, Recomendado o uso do plug-in Easy Image Gallery, caso deseje fazer uma galeria
 Author: José Guilherme
 Author URI: http://guilhermecampos.ml/
 Version: 1.0
@@ -79,6 +79,7 @@ header {
   position: fixed;
   padding: 24px;
   top: 0px;
+  z-index: 99999999;
   right: -30vw;
   transition: all linear .2s;
   width: 25vw;
@@ -226,7 +227,7 @@ header {
   width: 100%;
   padding: 3% 15%;
   display: flex;
-  background-color: #fff;
+  background-color: #111;
   justify-content: center;
   align-items: center;
   flex-direction: column; }
@@ -259,21 +260,21 @@ header {
         width: 100%;
         padding: 12px;
         margin: 0px 5px;
-        background-color: #fff;
-        color: #333;
+        background-color: #111;
+        color: #fff;
         border: solid 2px #444; }
     .contact form textarea {
       width: 100%;
       padding: 12px;
-      background-color: #fff;
-      color: #333;
+      background-color: #111;
+      color: #fff;
       border: solid 2px #444;
       margin: 0px 5px; }
     .contact form input[type=submit] {
       width: 180px;
-      background-color: #333;
+      background-color: #fff;
       font-size: 15px;
-      color: #fff;
+      color: #333;
       cursor: pointer;
       margin-top: 20px;
       padding: 12px;
